= Mechanize CHANGELOG

=== 2.8.0 / unreleased

* Requirements
  * Mechanize now requires Ruby 2.5 or newer.
  * Move from `ntlm-http` to `rubyntlm` gem. (#495, #574)

* New Features
  * Page::Link#uri now handles non-ASCII `href`s. (#569) @terryyin


=== 2.7.7 / 2021-02-01

* Security fixes for CVE-2021-21289

  Mechanize `>= v2.0`, `< v2.7.7` allows for OS commands to be injected into several classes'
  methods via implicit use of Ruby's `Kernel.open` method. Exploitation is possible only if
  untrusted input is used as a local filename and passed to any of these calls:

  - `Mechanize::CookieJar#load`: since v2.0 (see 208e3ed)
  - `Mechanize::CookieJar#save_as`: since v2.0 (see 5b776a4)
  - `Mechanize#download`: since v2.2 (see dc91667)
  - `Mechanize::Download#save` and `#save!` since v2.1 (see 98b2f51, bd62ff0)
  - `Mechanize::File#save` and `#save_as`: since v2.1 (see 2bf7519)
  - `Mechanize::FileResponse#read_body`: since v2.0 (see 01039f5)

  See https://github.com/sparklemotion/mechanize/security/advisories/GHSA-qrqm-fpv6-6r8g for more
  information.

  Also see #547, #548. Thank you, @kyoshidajp!

* New Features
  * Support for Ruby 3.0 by adding `webrick` as a runtime dependency. (#557) @pvalena

* Bug fix
  * Ignore input fields with blank names (#542, #536)


=== 2.7.6

* New Features
  * Mechanize#set_proxy accepts an HTTP URL/URI. (#513)

* Bug fix
  * Fix element(s)_with(search: selector) methods not working for forms, form fields and frames. (#444)
  * Improve the filename parser for the `Content-Disposition` header. (#496, #517)
  * Accept `Content-Encoding: identity`. (#515)
  * Mechanize::Page#title no longer picks a title in an embeded SVG/RDF element. (#503)
  * Make Mechanize::Form#has_field? boolean. (#501)

=== 2.7.5

* New Features
  * All 4xx responses and RedirectLimitReachedError when fetching robots.txt are treated as full allow just like Googlebot does.
  * Enable support for mime-types > 3.

* Bug fix